--- a/app/views/layouts/jqGrid.html.erb
+++ b/app/views/layouts/jqGrid.html.erb
@@ -10,6 +10,7 @@
   <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js' %>
   <%= javascript_include_tag 'jqGrid/js/i18n/grid.locale-en.js' %>
   <%= javascript_include_tag 'jqGrid/jquery.jqGrid.js' %>
+  <%= javascript_include_tag 'sprintf' %>
 
   <%= csrf_meta_tag %>
 </head>
