--- a/app/views/layouts/jqGrid.html.erb
+++ b/app/views/layouts/jqGrid.html.erb
@@ -8,7 +8,7 @@
   
   <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js' %>
   <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js' %>
-  <%= javascript_include_tag 'jqGrid/js/i18n/grid.locale-en.js' %>
+  <%= javascript_include_tag 'jqGrid/js/i18n/grid.locale-pt-br.js' %>
   <%= javascript_include_tag 'jqGrid/jquery.jqGrid.js' %>
   <%= javascript_include_tag 'sprintf' %>
 
